Add ContainsPair.java from lab2 (accidentally copied from lab00-warmup)